--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="imperial_your_weight">Your weight (lb):</string>
     <string name="invalid">Invalid input data</string>
     <string name="ok">OK</string>
+    <string name="result_header">Your BMI is: %.0f</string>
 </resources>
