--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,5 @@
     <string name="lt25">20 &#8211; 25</string>
     <string name="lt30">25 &#8211; 30</string>
     <string name="gt30">&gt; 30</string>
-    <string name="nobrowser">Browser not found</string>
+    <string name="info">More about BMI</string>
 </resources>
